2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * seahorse-ldap-source.c: 
    * seahorse-keyserver-results.c: Handle spaces properly in LDAP 
    search filters. 
    
2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key-data.c: Don't add extra lines to 
    .ssh/authorized_keys when moving keys around. Fixes bug #352929
    
2007-04-03  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c: Fix crasher when deleting more than one 
    private keys. Fixes bug #417901
    
2007-04-03  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-private-key-properties.glade: Show expired date properly
    in warning message for private keys.
    
2007-03-27  Adam Schreiber <sadam@clemson.edu>
    
    * src/seahorse-key-manager.c: Fix il8n of the about dialog.
    Patch from Bjoern Voigt.  Fixes bug #423082
    
2007-03-22  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: 
    * INSTALL: Require GTK+ version 2.10

2007-03-19  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-operation.h:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * src/seahorse-ssh-upload.c: Recognize port properly in SSH key upload 
    Fixes bug #418205
    
2007-03-19  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-status.c:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-server-source.c: 
    * libseahorse/seahorse-ssh-key-data.c: (possible crasher)
    * libseahorse/seahorse-util.c: (minor capitalization bug)
    * src/seahorse-ssh-upload.c: Satisfy compiler warnings.
    
2007-03-19  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c: 
    * libseahorse/seahorse-passphrase.c: Setup icons for passphrase 
    prompts.

2007-03-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gtkstock.c: Setup a default icon for processes.
    Fixes bug #419264