@@ -1,7 +1,12 @@
 2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>
 
-    * seahorse-ldap-source.c: 
-    * seahorse-keyserver-results.c: Handle spaces properly in LDAP 
+    * libseahorse/seahorse-ldap-source.c: Make progress bar pulse 
+    properly during an LDAP search. Fixes bug #355850
+    
+2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-ldap-source.c: 
+    * src/seahorse-keyserver-results.c: Handle spaces properly in LDAP 
     search filters. 
     
 2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>
